2009-06-01  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_dictionary_*();
	* Added cg_net_uri_getquerydictionary().
	* Fixed a buffer overrun of cg_xml_escapechars().
	* Changed cg_socket_setid() not to raise SIGPIPE on iPhone.
	
2009-05-28  Satoshi Konno <skonno@cybergarage.org>
	* Improved cg_string_*() and cg_list_*() not to abort when the specified string object is NULL.
	* Added cg_upnp_device_getsmallesticonbymimetype().
	* Added cg_upnp_device_addicon().
	* Added CGUpnpDevice:setDeviceType().
	* Added cg_http_request_postdata().
	* Added cg_http_request_postchunkeddata() and cg_http_request_postlastchunk().
	* Added cg_http_request_closesocket().
	* Added cg_upnp_device_isrunning().

2009-04-23  Satoshi Konno <skonno@cybergarage.org>
	* Added DLNA-CP-version in the USER-AGENT HTTP header value as default.

2009-01-29  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_net_uri_rebuild() and cg_net_url_rebuild().
	* Fixed cg_upnp_service_mangleurl() to return correct url using cg_net_uri_rebuild() when a device has URLBase and the service's URL is relative.
	* Changed cg_upnp_controlpoint_parsescservicescpd() to read the service description internally because the some illegal devices, such as MediaLink, don't return the specified service description.

2008-12-08  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_device_getsmallesticon().
	* Added cg_upnp_device_getabsoluteiconurl().
	* Added cg_net_uri_setvalue() and cg_net_uri_getvalue().
	* Deprecated cg_net_uri_set().
	* Added CGUpnpDevice:urlBase().
	* Added CGUpnpDevice:smallestIcon().
	* Added CGUpnpDevice:absoluteIconUrl().
	
2008-11-18  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_http_request_post_main() to write the first line at a time because SIGPIPE occurred on some HTTP server such as Flickr.

2008-10-31  Satoshi Konno <skonno@cybergarage.org>
	* v2.3
	* Added UPnP/AV package in std/av as a sample implementation.

2008-09-26 Satoshi Konno <skonno@cybergarage.org>